# CornerDetection

./: CMakeLists.txt  README.md
include/: CornerDetection.h  Definitions.h
scratchpad/: main.cpp
src/: CornerDetection.cpp
tests/: CornerDetectionTest.cpp
